k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architecture-draft-service
spec:
  selector:
    app: architecture-draft
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
